--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 .App {
   text-align: center;
-  font-family: 'Reem Kufi', sans-serif;
+  font-family: 'Tahoma', 'Geneva', sans-serif;
 }
 
 .App-logo {
