--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,9 +1,9 @@
 .header {
     padding: 30px 0;
-    color: #ffffff;
-    background-color: #101D42;
+    color: white;
+    background-color:#009EDB;
     width: 100%;
     text-align: center;
-    border-bottom: 5px solid #DB162F;
+    border-bottom: 5px solid white;
     margin-bottom: 10px;
 }
