--- a/src/styles/SearchName.css
+++ b/src/styles/SearchName.css
@@ -1,8 +1,8 @@
 .searchbox button {
-    border: 1px solid #101D42;
+    border: 1px solid #009EDB;
 }
 
 .searchbox button:hover {
-    background-color: #101D42;
+    background-color: #009EDB;
     color: #ffffff;
 }
